NavigationBar: bug fixed & improved StatsBlock: dark mode fixed Share & TopBar stories: bug fixed

--- a/src/components/StatsBlock/style.scss
+++ b/src/components/StatsBlock/style.scss
@@ -49,14 +49,15 @@
         @apply text-b3 tracking-normal zpl-sb-item-title font-sans font-medium text-right text-[#747481];
 
         // dark
-        @apply dark:border-border-dark-divider;
+        @apply dark:text-text-dark-soft;
+
+        svg {
+          @apply dark:text-icon-dark-disabled;
+        }
       }
 
       .allContent{
         @apply flex flex-col items-center text-center pb-xs;
-
-        // dark
-        @apply dark:text-white-100;
 
         .content{
           @apply text-[#2E2E38] flex text-center font-bold not-italic items-center text-ls-md flex-1 font-YekanBakhFaNum gap-xs my-xs;
@@ -69,7 +70,7 @@
           @apply flex items-center text-center text-b3 font-normal not-italic flex-1 text-b3 text-text-soft font-IRANYekanFaNum;
 
           // dark
-          @apply dark:border-border-dark-soft;
+          @apply dark:text-text-dark-soft;
         }
       }
     }
